// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageTemplate _EuiPageInnerProps is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <div
    class="customClassName emotion-euiPageInner-left"
    id="customID"
  />
</div>
`;

exports[`EuiPageTemplate _EuiPageInnerProps renders as panelled 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <div
    class="emotion-euiPageInner-panelled"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate _EuiPageOuterProps is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-column-grow"
  style="min-block-size: 460px; padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate bottomBorder is rendered as extended 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate bottomBorder is rendered as true 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate children detects sidebars and does not place them in the main EuiPageInner 1`] = `
<div
  aria-label="aria-label"
  class="euiPageTemplate testClass1 testClass2 emotion-euiPageOuter-row-grow-euiTestCss"
  data-test-subj="test subject string"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <div
    class="emotion-euiPageSidebar-l"
    style="min-inline-size: 248px;"
  />
  <div
    class="emotion-euiPageSidebar-l"
    style="min-inline-size: 248px;"
  />
  <main
    class="emotion-euiPageInner-panelled-left"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate children renders all other types within the main EuiPageInner 1`] = `
<div
  aria-label="aria-label"
  class="euiPageTemplate testClass1 testClass2 emotion-euiPageOuter-row-grow-euiTestCss"
  data-test-subj="test subject string"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  >
    <header
      class="euiPageHeader emotion-euiPageHeader-l-border-plain"
    >
      <div
        class="emotion-euiPageHeaderContent-l"
        style="max-width: 1200px;"
      >
        <div
          class="css-acb1mh-flex-center"
        >
          A
        </div>
      </div>
    </header>
    <section
      class="emotion-euiPageSection-grow-l-top-plain"
    >
      <div
        class="emotion-euiPageSection__content-l-restrictWidth"
        style="max-width: 1200px;"
      >
        B
      </div>
    </section>
    <section>
      C
    </section>
  </main>
</div>
`;

exports[`EuiPageTemplate is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageTemplate testClass1 testClass2 emotion-euiPageOuter-row-grow-euiTestCss"
  data-test-subj="test subject string"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate minHeight is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(40vh, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate offset is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: 100px;"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate paddingSize l is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate paddingSize m is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate paddingSize none is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate paddingSize s is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate paddingSize xl is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate paddingSize xs is rendered 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate restrict width can be set to a custom number 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate restrict width can be set to a custom value and measurement 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;

exports[`EuiPageTemplate restrict width can be set to a default 1`] = `
<div
  class="euiPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size: max(460px, 100vh); padding-block-start: var(--euiFixedHeadersOffset, 0);"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  />
</div>
`;
